--- a/index.html
+++ b/index.html
@@ -148,16 +148,16 @@
         </ol>
         <div class="carousel-inner">
           <div class="item active">
-            <img src="images/1.jpg" width="1920" height="1080px">
+            <img src="1.jpg" width="1920" height="1080px">
           </div>
           <div class="item">
-            <img src="images/2.jpg" width="1920" height="1080">
+            <img src="2.jpg" width="1920" height="1080">
           </div>
           <div class="item">
-            <img src="images/3.jpg" width="1920" height="1080">
+            <img src="3.jpg" width="1920" height="1080">
           </div>
           <div class="item">
-            <img src="images/4.jpg" width="1920" height="1080">
+            <img src="4.jpg" width="1920" height="1080">
           </div>
         </div>
         <!--end carousel inner-->
@@ -190,13 +190,13 @@
               sit? Odit!</p>
           </div>
           <div class="col-lg-4 col-xs-6">
-            <img src="images/5.png" class="img-responsive">
+            <img src="5.png" class="img-responsive">
           </div>
         </div>
         <br>
         <div class="row">
           <div class="col-lg-4 col-xs-6">
-            <img src="images/6.png" class="img-responsive">
+            <img src="6.png" class="img-responsive">
           </div>
           <div class="col-lg-8 col-xs-6">
             <h1>Heading 2</h1>
@@ -221,7 +221,7 @@
               sit? Odit!</p>
           </div>
           <div class="col-lg-4 col-xs-6">
-            <img src="images/7.png" class="img-responsive">
+            <img src="7.png" class="img-responsive">
           </div>
         </div>
         <!-- end row -->
