--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non dolore ab nihil ex voluptatibus? Deleniti
               dicta non deserunt atque sapiente.</p>
           </blockquote>
-          <footer>-Yash Agarwal</footer>
+          <footer>-Prakhar Saxena</footer>
         </div>
         <div class="col-sm-4">
           <blockquote>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non dolore ab nihil ex voluptatibus? Deleniti
               dicta non deserunt atque sapiente.</p>
           </blockquote>
-          <footer>-Yash Agarwal</footer>
+          <footer>-Prakhar Saxena</footer>
         </div>
         <div class="col-sm-4">
           <blockquote>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non dolore ab nihil ex voluptatibus? Deleniti
               dicta non deserunt atque sapiente.</p>
           </blockquote>
-          <footer>-Yash Agarwal</footer>
+          <footer>-Prakhar Saxena</footer>
         </div>
       </div>
       <!-- end row -->
